examples/type_system/failing/130_do_missing_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let y = do x + 1
let after = 1
